<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".presentation.login.LoginFragment">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/btn_profile_pict"
            android:layout_width="0dp"
            android:layout_height="300dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_fileName="lottie_login.json"
            app:lottie_loop="true" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailInputLayout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/email_address"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/signUp"
            app:placeholderText="@string/email_ed_hint"
            app:startIconDrawable="@drawable/ic_email_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordInputLayout"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/password"
            app:hintAnimationEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailInputLayout"
            app:passwordToggleEnabled="true"
            app:placeholderText="@string/password_ed_hint"
            app:startIconDrawable="@drawable/ic_password_24dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:imeOptions="actionSend"
                android:inputType="textPassword"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/emailSignInBtn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/login"
            android:textColor="?attr/colorOnPrimary"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@+id/passwordInputLayout"
            app:layout_constraintStart_toStartOf="@+id/passwordInputLayout"
            app:layout_constraintTop_toBottomOf="@+id/passwordInputLayout" />

        <Button
            android:id="@+id/googleSignInBtn"
            style="@style/ThemeOverlay.Material3.Button.ElevatedButton"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/white"
            android:drawableLeft="@drawable/ic_google_48dp"
            android:text="@string/sign_in_with_google"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            app:cornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="@+id/emailSignInBtn"
            app:layout_constraintStart_toStartOf="@+id/emailSignInBtn"
            app:layout_constraintTop_toBottomOf="@+id/emailSignInBtn"
            app:rippleColor="?attr/colorOnSecondary"
            app:strokeColor="?attr/colorSecondary"
            app:strokeWidth="1dp"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:id="@+id/signUp"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:singleLine="true"
            android:textColor="?attr/colorOnSurface"
            app:layout_constraintEnd_toEndOf="@+id/btn_profile_pict"
            app:layout_constraintStart_toStartOf="@+id/btn_profile_pict"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:text="@string/sign_up_text" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextAppearance.Material3.HeadlineSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_greeting"
            android:textColor="?attr/colorOnSurface"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/btn_profile_pict"
            app:layout_constraintStart_toStartOf="@+id/btn_profile_pict"
            app:layout_constraintTop_toBottomOf="@+id/btn_profile_pict" />

        <ProgressBar
            android:id="@+id/emailProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:indeterminateTint="?attr/colorOnPrimary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/emailSignInBtn"
            app:layout_constraintEnd_toEndOf="@+id/emailSignInBtn"
            app:layout_constraintStart_toStartOf="@+id/emailSignInBtn"
            app:layout_constraintTop_toTopOf="@+id/emailSignInBtn" />

        <ProgressBar
            android:id="@+id/googleProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:indeterminateTint="@android:color/black"
            app:layout_constraintBottom_toBottomOf="@+id/googleSignInBtn"
            app:layout_constraintEnd_toEndOf="@+id/googleSignInBtn"
            app:layout_constraintStart_toStartOf="@+id/googleSignInBtn"
            app:layout_constraintTop_toTopOf="@+id/googleSignInBtn" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>